--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   
     </div>
   
-    <div class="col mb-3 text-bg-dark">
+    <div class="col mb-3 text-bg-dark ms-1">
       <h5>About</h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2"><a href="home.html" class="nav-link p-0 text-bg-dark">Me</a></li>
@@ -193,7 +193,7 @@
       </ul>
     </div>
   
-    <div class="col mb-3 text-bg-dark">
+    <div class="col mb-3 text-bg-dark ms-1">
       <h5>Services</h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-bg-dark">Web Design and Development</a></li>
@@ -203,7 +203,7 @@
       </ul>
     </div>
   
-    <div class="col mb-3 text-bg-dark">
+    <div class="col mb-3 text-bg-dark ms-1">
       <h5>Contact</h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-bg-dark">Reach Out</a></li>
