--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <style>
       body {
     overflow-x: hidden;
+
 }
+
 /* Show dropdown menu on hover */
 .nav-item.dropdown:hover .dropdown-menu {
               display: block; /* Show the dropdown on hover */
@@ -23,7 +25,7 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Offcanvas navbar large">
+  <nav class="col-lg-12 col-sm-12 col-md-12 col-xxl-12 col-xl-12 navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Offcanvas navbar large">
       <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="/images/my logo.png" alt="Lawson The Web Developer Logo" height="65"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
@@ -97,7 +99,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid bg-dark py-5">
+<div class="container-fluid bg-dark py-5 ">
   <h2 class="display-6 fw-bold text-white lh-1 mb-3 ms-1">Services</h2>
 
   <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5">
@@ -173,7 +175,7 @@
     </div>
     <div class="col-lg-6">
       <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 ms-1">Golden Rule</h1>
-      <p class="lead ms-1">As customer satisfaction is one of my top priorities, you pay after being satisifed with the product.</p>
+      <p class="lead ms-1">Customer satisfaction is my top priority, which is why you only pay after you are fully satisfied with the product.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <button type="button" class="btn btn-dark btn-lg px-4">Get In Touch</button>
       </div>
