--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Lawson The Web Developer</title>
-  <link rel="icon" type="image/x-icon" href="/images/logo-color.svg">
+  <link rel="icon" type="image/x-icon" href="logo-color.svg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -23,7 +23,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Offcanvas navbar large">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/images/my logo.png" alt="Lawson The Web Developer Logo" height="90"></a>
+        <a class="navbar-brand" href="#"><img src="my logo.png" alt="Lawson The Web Developer Logo" height="90"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -76,7 +76,7 @@
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-10 col-sm-8 col-lg-6">
-      <img src="/images/afternavbar.webp" class="d-block mx-lg-auto img-fluid" alt="A guy on a computer " width="700" height="500" loading="lazy">
+      <img src="afternavbar.webp" class="d-block mx-lg-auto img-fluid" alt="A guy on a computer " width="700" height="500" loading="lazy">
     </div>
     <div class="col-lg-6">
       <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Junior Web Developer</h1>
@@ -165,8 +165,8 @@
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <!-- Image Section -->
     <div class="col-10 col-sm-8 col-lg-6">
-      <img src="/images/handshake.webp" class="d-block mx-lg-auto img-fluid rounded-5" 
-           alt="A guy on a computer" width="400" height="500" loading="lazy">
+      <img src="handshake.webp" class="d-block mx-lg-auto img-fluid rounded-5" 
+           alt="Handshake between male and female" width="400" height="500" loading="lazy">
     </div>
 
     <!-- Text Content Section -->
@@ -188,7 +188,7 @@
   <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top bg-dark">
     <div class="col mb-3">
       <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
-        <img src="/images/my logo.png" alt="" height="100">
+        <img src="my logo.png" alt="" height="100">
       </a>
     </div>
 
